--- a/O5/Latex/Analisi.tex
+++ b/O5/Latex/Analisi.tex
@@ -8,10 +8,25 @@ Quindi il rapporto tra le intensità della luce trasmessa ($I_f$) e incidente su
 
 \begin{equation}
 	I_f \,\,=\,\, I_0 \,\, e^{-kcL}
+	\label{eq:intensita}
 \end{equation}
+%
+dove con $I_0$ indichiamo l'intensità della radiazione incidente sul contenitore, con $L$ indichiamo il cammino ottico (ovvero lo spessore del contenitore) e $c$ indica la concentrazione di $CuSO_4$ presente nella sostanza. Infine con il termine $k$ indichiamo l'estinzione molare o il coefficiente di assorbimento molare. Ricordiamo che il suo valore è considerato costante per una data sostanza ad una data lunghezza d'onda, tuttavia può subire lievi variazioni con la temperatura.
+Quindi poichè la durata delle nostre misure è stata molto breve possiamo escludere che il termine $k$ sia variato a causa della temperatura. Perciò ponendo:
 
+\begin{equation}
+	k\,c \,\,=\,\, \alpha\ped{c}
+\end{equation}
+%
+l'equazione (\ref{eq:intensita}) assume la seguente forma:
 
-\begin{figure}[hbtp]
-        \centering
-        \includegraphics[scale=0.4]{chem_dog.pdf}
-\end{figure}
+\begin{equation}
+	I_f \,\,=\,\, I_0 \,\, e^{-\alpha\ped{(c)}\,L}
+\end{equation}
+%
+
+ 
+%\begin{figure}[hbtp]
+%        \centering
+%        \includegraphics[scale=0.4]{chem_dog.pdf}
+%\end{figure}
