--- a/O5/Latex/Procedimento.tex
+++ b/O5/Latex/Procedimento.tex
@@ -55,7 +55,7 @@ abbiamo fatto questa seconda misura per accertarci che l'apparato durante tutte 
     \centering
     \begin{tabular}{c c }
         \toprule
-         Concentrazione molare & Intensità luminosa $[\si{\joule}]$ \\
+         Concentrazione molare & Intensità $I_f \,\, [\si{\joule}]$ \\
         \midrule
 		$1$ 	& $7.4 \pm 0.1$ \\
 		$0.9$ 	& $9.6 \pm 0.1$ \\       
@@ -64,13 +64,13 @@ abbiamo fatto questa seconda misura per accertarci che l'apparato durante tutte 
         $0.7$ 	& $17.2 \pm 0.1$ \\
         $0.65$ 	& $19.8 \pm 0.1$ \\
         $0.6$ 	& $22.0 \pm 0.1$ \\
-        $0.5$ 	& $25.9 \pm 0.1$ \\
-        $0.25$ 	& $49.0 \pm 0.1$ \\
-        $0.125$ & $74.0 \pm 0.1$ \\
-        $0.0625$ & $91.0 \pm 0.1$ \\
+        $0.5 \pm 0.014$ 	& $25.9 \pm 0.1$ \\
+        $0.25 \pm 0.01$ 	& $49.0 \pm 0.1$ \\
+        $0.125 \pm 0.006$ & $74.0 \pm 0.1$ \\
+        $0.0625 \pm 0.003$ & $91.0 \pm 0.1$ \\
         \bottomrule
     \end{tabular}
-    \caption{•}
+    \caption{In questa tabella sono riportati sulla prima colonna i valori della concentrazione molare di solfato di rame ($CuSO_4$) che siamo andati ad analizzare man mano. Sulla seconda colonna sono riportati i valori dell'intensità luminosa ($I_f$) in uscita dalla provettacontenente la soluzione. Ricordiamo che la soluzione 1 molare è stata presa senza errore. E' imprtante notare che gli errori sulle concetrazioni non sono uniformi in quanto ogni concentrazione (a scendere) è stata ottenuta da quella precedente, pertanto l'inceretezza si propaga. Infine facciamo notare che l'incertezza è stata inserita soltanto per le concentrazioni ottenute dalla procedura descritta ad inizio paragrafo, mentre alle concentrazioni condivise dai vari gruppi si è deciso di non attribuire alcun'errore.}
     \label{tab:dati}
 \end{table}
 %
