--- a/O5/Latex/Analisi.tex
+++ b/O5/Latex/Analisi.tex
@@ -40,9 +40,9 @@ Pertanto mediante un fit sulla legge lineare appena trovata (\ref{eq:fit}) siamo
 $A$ e $B$. Il fit sopracitato è riportato in Figura (%\ref{fig:grafico}).
 Dal fit lineare abbiamo trovato i seguenti valori per $A$ e $B$:
 
-\begin{equation}
+\begin{equation*}
 	A \,=\, XXX \pm XXX \qquad \text{e} \qquad B \,=\, XXX \pm XXX
-\end{equation}
+\end{equation*}
 %
 A questo punto rovesiando la formula (\ref{eq:fit}) otteniamo che i valori di $I\ped{0\ped{exp}}$ e di $kL$ sono i seguenti:
 
