--- a/O5/Latex/Analisi.tex
+++ b/O5/Latex/Analisi.tex
@@ -12,6 +12,13 @@ Quindi il rapporto tra le intensità della luce trasmessa ($I_f$) e incidente su
 \end{equation}
 %
 dove con $I_0$ indichiamo l'intensità della radiazione incidente sul contenitore, con $L$ indichiamo il cammino ottico (ovvero lo spessore del contenitore) e $c$ indica la molarità ovvero la concentrazione di $CuSO_4$ presente nella sostanza (moli su litro). Infine con il termine $k$ indichiamo l'estinzione molare o il coefficiente di assorbimento molare. Ricordiamo che il suo valore è considerato costante per una data sostanza ad una data lunghezza d'onda, tuttavia può subire lievi variazioni con la temperatura.
+
+Facciamo notare che $I_0$ nel nostro caso fa riferimento al valore dell'intensità della radiazione nel caso in cui nella provetta ci sia solamente acqua distillata. Pertanto da ora in avanti faremo riferimento al valore riportato nella formula (\ref{eq:acqua}) che vale:
+
+\begin{equation}
+	I_0 \,\,=\,\, I\ped{H_2O} \,\,=\,\, 114 \pm 1 \,\,\, \si{\joule}
+\end{equation}
+%
 Quindi poichè la durata delle nostre misure è stata molto breve possiamo escludere che il termine $k$ sia variato a causa della temperatura, e quindi lo possiamo assumere costante.
 Pertanto possiamo scrivere quanto segue:
 
@@ -27,7 +34,10 @@ e quindi otteniamo che la relazione (\ref{eq:intensita}) diventa:
 \end{equation}
 %
 
-Pertanto lo scopo di questa relazione è quello di verificare la bontà di questa legge sfruttando i dati da noi raccolti. In particolare verificare se $I_0$ sarà compatibile colvalore di $I\ped{0\ped{exp}}$ che troveremo dall'analisi dati.
+Pertanto lo scopo di questa relazione è quello di verificare la bontà di questa legge sfruttando i dati da noi raccolti.
+Quindi ci proponiamo di verificare la relazione sopracitata nel caso in cui $L$ venga presa costante sia nel caso in cui sia $c$ ad essere costante
+
+ In particolare verificare se $I_0$ sarà compatibile colvalore di $I\ped{0\ped{exp}}$ che troveremo dall'analisi dati.
 Per fare quanto acennato sopra dobbiamo semplificare la scrittura della relazione appena trovata (\ref{eq:inutile}).
 A tal fine riscriviamo la legge nel seguente modo:
 
@@ -44,7 +54,7 @@ Dal fit lineare abbiamo trovato i seguenti valori per $A$ e $B$:
 	A \,=\, XXX \pm XXX \qquad \text{e} \qquad B \,=\, XXX \pm XXX
 \end{equation*}
 %
-A questo punto rovesiando la formula (\ref{eq:fit}) otteniamo che i valori di $I\ped{0\ped{exp}}$ e di $kL$ sono i seguenti:
+A questo punto rovesciando la formula (\ref{eq:fit}) otteniamo che i valori di $I\ped{0\ped{exp}}$ e di $kL$ sono i seguenti:
 
 \begin{equation}
 	I\ped{0\ped{exp}} \,=\, XXX \pm XXX \qquad \text{e} \qquad kL \,=\, XXX \pm XXX
@@ -53,17 +63,6 @@ A questo punto rovesiando la formula (\ref{eq:fit}) otteniamo che i valori di $I
 
 
 
-
-
-%Ora il nostro obbiettivo è quello di trovare una scrittura della legge (\ref{eq:intensita}) che leghi direttamente l'intensità luminosa finale ($I_f$) con la concentrazione molare della sostanza ($c$). Quindi andiamo ad analizzare una relazione di questo tipo:
-
-%\begin{equation}
-%	I_f \,\,=\,\, A \,\, e^{-\alpha\ped{(c)}\,L}
-%\end{equation}
-%
-
-
- 
 %\begin{figure}[hbtp]
 %        \centering
 %        \includegraphics[scale=0.4]{chem_dog.pdf}
