--- a/O5/Latex/Procedimento.tex
+++ b/O5/Latex/Procedimento.tex
@@ -1,3 +1,4 @@
+
 \section{Procedimento}
 
 \subsection{Preparazione della soluzione}
@@ -39,17 +40,17 @@ La soluzione ricavata è stata interamente versata nell'ultimo contenitore trasp
 Come prima operazione abbiamo misurato l'intensità iniziale del raggio laser ($I_0$) senza alcun ostacolo tra la sorgente e il misuratore di intensità. Abbiamo ottenuto il seguente valore:
 
 \begin{equation*}
-	I\ped{0\ped{1}} \,\,=\,\, 130.0 \pm 0.1 \,\,\, \si{\joule} \,\, ??
+	I\ped{0\ped{1}} \,\,=\,\, 130 \pm 1 \,\,\, \si{\joule} \,\, ??
 \end{equation*}
 %
 Quindi abbiamo misurato per ogni concentrazione di $CuSO_4$ l'intensità luminosa finale ($I_f$) del raggio laser. Abbiamo eseguito questa misura non solo sulle quattro concentrazioni da noi fatte ma anche su quelle comuni a tutti i gruppi, ovvero quelle comprese tra 1 e 0.5 molare. I valori da noi ottenuti sono riportati nella tabela seguente, Tabella \ref{tab:dati}.
 Infine abbiamo misurato nuovamente il valore dell'intensità luminosa del raggio laser a vuoto. Abbiamo ottenuto un valore di:
 
 \begin{equation*}
-	I\ped{0\ped{2}} \,\,=\,\, 131.0 \pm 0.1 \,\,\, \si{\joule} \,\, ??
+	I\ped{0\ped{2}} \,\,=\,\, 131 \pm 1 \,\,\, \si{\joule} \,\, ??
 \end{equation*}
 %
-abbiamo fatto questa seconda misura per accertarci che l'apparato durante tutte le misure fosse rimasto, nei limiti del possibile, stabile. Infatti se le due intensità luminose fossero state troppo diferenti tra di loro si sarebbe dovuta ripetere l'intera procedura di misura.
+Questa seconda misura ci serve per accertarci che l'apparato durante tutte le misure sia rimasto, nei limiti del possibile, stabile. Infatti se le due intensità luminose fossero state troppo diferenti tra di loro si sarebbe dovuta ripetere l'intera procedura di misura. Per fortuna le due misure risultano compatibili entro le loro incertezze, quindi i dati ottenuti sono validi e possiamo procedere ad analiizzarli.
 
 \begin{table}[t!]
     \centering
@@ -57,27 +58,34 @@ abbiamo fatto questa seconda misura per accertarci che l'apparato durante tutte 
         \toprule
          Concentrazione molare & Intensità $I_f \,\, [\si{\joule}]$ \\
         \midrule
-		$1$ 	& $7.4 \pm 0.1$ \\
-		$0.9$ 	& $9.6 \pm 0.1$ \\       
-        $0.8$ 	& $13.3 \pm 0.1$ \\
-        $0.75$ 	& $14.2 \pm 0.1$ \\
-        $0.7$ 	& $17.2 \pm 0.1$ \\
-        $0.65$ 	& $19.8 \pm 0.1$ \\
-        $0.6$ 	& $22.0 \pm 0.1$ \\
-        $0.5 \pm 0.014$ 	& $25.9 \pm 0.1$ \\
-        $0.25 \pm 0.01$ 	& $49.0 \pm 0.1$ \\
-        $0.125 \pm 0.006$ & $74.0 \pm 0.1$ \\
-        $0.0625 \pm 0.003$ & $91.0 \pm 0.1$ \\
+		$1$ 	& $7 \pm 1$ \\
+		$0.9$ 	& $10 \pm 1$ \\       
+        $0.8$ 	& $13 \pm 1$ \\
+        $0.75$ 	& $14 \pm 1$ \\
+        $0.7$ 	& $17 \pm 1$ \\
+        $0.65$ 	& $20 \pm 1$ \\
+        $0.6$ 	& $22 \pm 1$ \\
+        $0.5 \pm 0.014$ 	& $26 \pm 1$ \\
+        $0.25 \pm 0.01$ 	& $49 \pm 1$ \\
+        $0.125 \pm 0.006$ & $74 \pm 1$ \\
+        $0.0625 \pm 0.003$ & $91 \pm 1$ \\
         \bottomrule
     \end{tabular}
     \caption{In questa tabella sono riportati sulla prima colonna i valori della concentrazione molare di solfato di rame ($CuSO_4$) che siamo andati ad analizzare man mano. Sulla seconda colonna sono riportati i valori dell'intensità luminosa ($I_f$) in uscita dalla provettacontenente la soluzione. Ricordiamo che la soluzione 1 molare è stata presa senza errore. E' imprtante notare che gli errori sulle concetrazioni non sono uniformi in quanto ogni concentrazione (a scendere) è stata ottenuta da quella precedente, pertanto l'inceretezza si propaga. Infine facciamo notare che l'incertezza è stata inserita soltanto per le concentrazioni ottenute dalla procedura descritta ad inizio paragrafo, mentre alle concentrazioni condivise dai vari gruppi si è deciso di non attribuire alcun'errore.}
     \label{tab:dati}
 \end{table}
 %
-Inoltre abbiamo anche misurato l'intensità finale del raggio laser quando la soluzione era composta interamente da acqua distillata e abbiamo ottenuto il seguente valore:
+Inoltre abbiamo anche misurato l'intensità del raggio laser quando la soluzione era composta interamente da acqua distillata e abbiamo ottenuto il seguente valore:
+
+\begin{equation}
+	I\ped{H_2O} \,\,=\,\, 114 \pm 1 \,\,\, \si{\joule}
+	\label{eq:acqua}
+\end{equation}
+%
+Infine abbiamo misurato, col calibro (???), la larghezza del contenitore nel quale viene posta la soluzione. Il suo valore risulta essere il seguente:
 
 \begin{equation*}
-	I\ped{H_2O} \,\,=\,\, 114.0 \pm 0.1 \,\,\, \si{\joule}
+	L \,\,=\,\, XXX \pm XXX
 \end{equation*}
 
 \begin{figure}[hbtp]
