--- a/O5/Latex/Analisi.tex
+++ b/O5/Latex/Analisi.tex
@@ -35,7 +35,9 @@ e quindi otteniamo che la relazione (\ref{eq:intensita}) diventa:
 %
 
 Pertanto lo scopo di questa relazione è quello di verificare la bontà di questa legge sfruttando i dati da noi raccolti.
-Quindi ci proponiamo di verificare la relazione sopracitata nel caso in cui $L$ venga presa costante sia nel caso in cui sia $c$ ad essere costante
+Quindi ci proponiamo di verificare la relazione sopracitata nel caso in cui $L$ venga presa costante e nel caso in cui sia $c$ ad essere costante.
+
+\subsection{}
 
  In particolare verificare se $I_0$ sarà compatibile colvalore di $I\ped{0\ped{exp}}$ che troveremo dall'analisi dati.
 Per fare quanto acennato sopra dobbiamo semplificare la scrittura della relazione appena trovata (\ref{eq:inutile}).
