--- a/O5/Latex/Procedimento.tex
+++ b/O5/Latex/Procedimento.tex
@@ -12,7 +12,7 @@ Partendo da 2ml di soluzione uno molare di $CuSO_4$ a nostra disposizione abbiam
 %
 dove $C_f$ è la concentrazione molare finale della soluzione, $C_i$ è la concentrazione molare iniziale della soluzione, $V_i$ è il volume iniziale della soluzione mentre $V_f$ è il volume finale della soluzione.
 
-In questa esperienza siamo partiti da una soluzione a concentrazione uno molare di $CuSO_4$ che mana mano abbiamo diluito per ottenerne nuove concentrazioni, inferiori all'uno molare naturalmente.
+In questa esperienza siamo partiti da una soluzione a concentrazione uno molare di $CuSO_4$ che mano mano abbiamo diluito per ottenerne nuove concentrazioni, inferiori all'uno molare naturalmente :-).
 Pertanto abbiamo seguito questo semplice procediemnto per ottenere la serie di concentrazioni elencate sopra:
 
 \begin{itemize}
