--- a/O5/Latex/Materiale.tex
+++ b/O5/Latex/Materiale.tex
@@ -2,10 +2,10 @@
 
 Per questa esperienza di laboratorio il materiale a disposizione è stato il seguente:
 \begin{itemize}
-	\item{due cilindri graduati da 10 $\si{\milli\litre}$ con risoluzione da 1 $\si{\milli\litre}$;}
-    \item{un beker contenente acqua distillata;}
+	\item{Due cilindri graduati da 10 $\si{\milli\litre}$ con risoluzione da 1 $\si{\milli\litre}$;}
+    \item{Un beaker contenente acqua distillata;}
 	\item{5 contenitori trasparenti e una base in polistirolo;}
-	\item{due pipette Pasteur, o contagocce;}
-	\item{una certa quantità di soluzione uno molare di solfato di rame ($CuSO_4$) in comune a tutti i gruppi;}
-	\item{apparato di misura composto da laser, sistema di lenti, staffe, supporti vari e un misuratore di intensità luminosa;}
+	\item{Due pipette Pasteur, o contagocce;}
+	\item{Una certa quantità di soluzione uno molare di solfato di rame ($CuSO_4$) in comune a tutti i gruppi;}
+	\item{Apparato di misura composto da laser, sistema di lenti, staffe, supporti vari e un misuratore di intensità luminosa;}
 \end{itemize}
