--- a/O5/Latex/Analisi.tex
+++ b/O5/Latex/Analisi.tex
@@ -39,9 +39,8 @@ Quindi ci proponiamo di verificare la relazione sopracitata nel caso in cui $L$ 
 
 \subsection{Intensità in funzione della concentrazione molare}
 
- In particolare verificare se $I_0$ sarà compatibile colvalore di $I\ped{0\ped{exp}}$ che troveremo dall'analisi dati.
-Per fare quanto acennato sopra dobbiamo semplificare la scrittura della relazione appena trovata (\ref{eq:inutile}).
-A tal fine riscriviamo la legge nel seguente modo:
+In questa sezione verificheremo se $I_0$ risulta essere compatibile col valore di $I\ped{0\ped{exp}}$ che troveremo dall'analisi dati. Questa verifica viene fatta mantenendo la lunghezza del contenitore costante.
+Per fare quanto acennato sopra vogliamo semplificare la scrittura della relazione (\ref{eq:inutile}) per poi poterne fare un fit lineare. A tal fine riscriviamo la legge nel seguente modo:
 
 \begin{equation}
 	\log{I_f} \,\,=\,\, A \,-\, B \, c \qquad \text{dove} \qquad A \,=\, log{I_0} \quad \text{e} \quad B\,=\, kL
