--- a/O5/Latex/Procedimento.tex
+++ b/O5/Latex/Procedimento.tex
@@ -3,7 +3,7 @@
 
 \subsection{Preparazione della soluzione}
 
-Partendo da 2ml di soluzione uno molare di $CuSO_4$ a nostra disposizione abbiamo creato 4 soluzioni con diversa concentrazione (0.5, 0.25, 0.125, 0.0625) grazie alla seguente formula:
+Partendo da $2\,\,\si{\milli\litre}$ di soluzione uno molare di $CuSO_4$ a nostra disposizione abbiamo creato 4 soluzioni con diversa concentrazione (0.5, 0.25, 0.125, 0.0625) grazie alla seguente formula:
 
 \begin{equation}
 	C_f \,\, = \,\, C_i \,\, \frac{V_i}{V_f}
@@ -22,7 +22,7 @@ Pertanto abbiamo seguito questo semplice procediemnto per ottenere la serie di c
 	\item{in questo modo abbiamo dimezzato la concentrazione di $CuSO_4$ iniziale;}
 	\item{successivamente abbiamo mescolato la soluzione in modo da renderla omogenea. Abbiamo poi prelevato $2\,\,\si{\milli\litre}$ di sostanza che è stata versata in uno dei contenitori trasparenti;}
 	\item{in seguito abbiamo ripetuto la procedura sopra descritta in modo da dimezzare ulteriormente la concentrazione di sostanza appena ottenuta. Si noti infatti che per le diluizioni successive la concentrazione di soluto non è più dell'uno molare, ma per la seconda diluizione è del 0.5, per la terza del 0.25 e così via;}
-	\item{quindi alla fine abbiamo ottenuto quttro contenitori trasparenti con al loro interno $2\,\,\si{\milli\litre}$ di sostanza alle varie concentrazioni elencate sopra (0.5, 0.25, 0.125, 0.0625);}
+	\item{quindi alla fine abbiamo ottenuto quattro contenitori trasparenti con al loro interno $2\,\,\si{\milli\litre}$ di sostanza alle varie concentrazioni elencate sopra (0.5, 0.25, 0.125, 0.0625);}
 \end{itemize}
 
 Infine ogni gruppo ha creato una soluzione con concentrazione molare tra 1 e 0.5. Il nostro gruppo aveva l'incarico di preparare la soluzione 0.75 molare.
@@ -32,7 +32,7 @@ Quindi seguendo l'equazione (\ref{eq:proporzione}) abbiamo creato la soluzione d
 	V_f \,\, = \,\, V_i \,\, \frac{C_i}{C_f} \,\, = \,\, 1.5 \si{\milli\litre} \,\, \frac{1 \,\, \si{\mole\per\litre}}{0.75 \,\, \si{\mole\per\litre}} \,\, = \,\, 2 \,\, \si{\milli\litre}
 \end{equation*}
 %
-In questo modo abbiao ricavato quale doveva essere il volume finale di sostanza affinchè la sua concentrazione molare fosse del 0.75. Quindi abbiamo dovuto semplicemente aggiungere $0.5\,\,\si{\milli\litre}$ di acqua distillata alla soluzione iniziale.
+In questo modo abbiamo ricavato quale doveva essere il volume finale di sostanza affinchè la sua concentrazione molare fosse del 0.75. Quindi abbiamo dovuto semplicemente aggiungere $0.5\,\,\si{\milli\litre}$ di acqua distillata alla soluzione iniziale.
 La soluzione ricavata è stata interamente versata nell'ultimo contenitore trasparente a nostra disposizione che è stato infine riposto nella base di polistirolo.
 
 \subsection{Misura dell'intensità luminosa finale}
@@ -56,7 +56,7 @@ Questa seconda misura ci serve per accertarci che l'apparato durante tutte le mi
     \centering
     \begin{tabular}{c c }
         \toprule
-         Concentrazione molare & Intensità $I_f \,\, [\si{\joule}]$ \\
+         Concentrazione molare $[\si{\mole\per\litre}]$ & Intensità $I_f \,\, [\si{\joule}]$ \\
         \midrule
 		$1$ 	& $7 \pm 1$ \\
 		$0.9$ 	& $10 \pm 1$ \\       
@@ -71,7 +71,7 @@ Questa seconda misura ci serve per accertarci che l'apparato durante tutte le mi
         $0.0625 \pm 0.003$ & $91 \pm 1$ \\
         \bottomrule
     \end{tabular}
-    \caption{In questa tabella sono riportati sulla prima colonna i valori della concentrazione molare di solfato di rame ($CuSO_4$) che siamo andati ad analizzare man mano. Sulla seconda colonna sono riportati i valori dell'intensità luminosa ($I_f$) in uscita dalla provettacontenente la soluzione. Ricordiamo che la soluzione 1 molare è stata presa senza errore. E' imprtante notare che gli errori sulle concetrazioni non sono uniformi in quanto ogni concentrazione (a scendere) è stata ottenuta da quella precedente, pertanto l'inceretezza si propaga. Infine facciamo notare che l'incertezza è stata inserita soltanto per le concentrazioni ottenute dalla procedura descritta ad inizio paragrafo, mentre alle concentrazioni condivise dai vari gruppi si è deciso di non attribuire alcun'errore.}
+    \caption{In questa tabella sono riportati sulla prima colonna i valori della concentrazione molare di solfato di rame ($CuSO_4$) che siamo andati ad analizzare man mano. Sulla seconda colonna sono riportati i valori dell'intensità luminosa ($I_f$) in uscita dalla provetta contenente la soluzione. Ricordiamo che la soluzione 1 molare è stata presa senza errore. E' imprtante notare che gli errori sulle concetrazioni non sono uniformi in quanto ogni concentrazione (a scendere) è stata ottenuta da quella precedente, pertanto l'inceretezza si propaga. Infine facciamo notare che l'incertezza è stata inserita soltanto per le concentrazioni ottenute dalla procedura descritta ad inizio paragrafo, mentre alle concentrazioni condivise dai vari gruppi si è deciso di non attribuire alcun'errore.}
     \label{tab:dati}
 \end{table}
 %
