--- a/O5/Latex/Procedimento.tex
+++ b/O5/Latex/Procedimento.tex
@@ -3,7 +3,7 @@
 
 \subsection{Preparazione della soluzione}
 
-Partendo da $2\,\,\si{\milli\litre}$ di soluzione uno molare di $CuSO_4$ a nostra disposizione abbiamo creato 4 soluzioni con diversa concentrazione (0.5, 0.25, 0.125, 0.0625) grazie alla seguente formula:
+Partendo da $2\,\,\si{\milli\litre}$ di soluzione uno molare di CuSO$_4$ a nostra disposizione abbiamo creato 4 soluzioni con diversa concentrazione (0.5, 0.25, 0.125, 0.0625 \si{\mol\per\litre}) grazie alla seguente formula:
 
 \begin{equation}
 	C_f \,\, = \,\, C_i \,\, \frac{V_i}{V_f}
@@ -12,21 +12,25 @@ Partendo da $2\,\,\si{\milli\litre}$ di soluzione uno molare di $CuSO_4$ a nostr
 %
 dove $C_f$ è la concentrazione molare finale della soluzione, $C_i$ è la concentrazione molare iniziale della soluzione, $V_i$ è il volume iniziale della soluzione mentre $V_f$ è il volume finale della soluzione.
 
-In questa esperienza siamo partiti da una soluzione a concentrazione uno molare di $CuSO_4$ che mano mano abbiamo diluito per ottenerne nuove concentrazioni, inferiori all'uno molare naturalmente :-).
-Pertanto abbiamo seguito questo semplice procediemnto per ottenere la serie di concentrazioni elencate sopra:
+In questa esperienza siamo partiti da una soluzione a concentrazione uno molare di CuSO$_4$ che mano mano abbiamo diluito,
+dimezzando ogni volta la concentrazione. In questo modo la procedura è molto semplice anche se un po' monotona.
+Abbiamo seguito questo semplice procedimento, partendo da \SI{2}{\milli\litre} di uno molare:
 
 \begin{itemize}
-	\item{siamo partiti con un volume di $2\,\,\si{\milli\litre}$ di soluzione di $CuSO_4$ alla concentrazione uno molare;}
-	\item{abbiamo deciso di fare quattro diluizioni della sostanza iniziale. In particolare abbiamo dimezzato ogni volta la concentrazione precedente in modo da rendere la procedura operativa molto semplice;}
-	\item{infatti dalla soluzione di partenza abbiamo creato la prima diluizione aggiungendo $2\,\,\si{\milli\litre}$ di acqua distillata. Abbiamo dunque portato il volume finale della soluzione a $4\,\,\si{\milli\litre}$;}
-	\item{in questo modo abbiamo dimezzato la concentrazione di $CuSO_4$ iniziale;}
-	\item{successivamente abbiamo mescolato la soluzione in modo da renderla omogenea. Abbiamo poi prelevato $2\,\,\si{\milli\litre}$ di sostanza che è stata versata in uno dei contenitori trasparenti;}
-	\item{in seguito abbiamo ripetuto la procedura sopra descritta in modo da dimezzare ulteriormente la concentrazione di sostanza appena ottenuta. Si noti infatti che per le diluizioni successive la concentrazione di soluto non è più dell'uno molare, ma per la seconda diluizione è del 0.5, per la terza del 0.25 e così via;}
-	\item{quindi alla fine abbiamo ottenuto quattro contenitori trasparenti con al loro interno $2\,\,\si{\milli\litre}$ di sostanza alle varie concentrazioni elencate sopra (0.5, 0.25, 0.125, 0.0625);}
+	\item{Da \SI{2}{\milli\litre} di soluzione di partenza abbiamo diluito aggiungendo \SI{2}{\milli\litre} di acqua distillata.
+	    Il volume finale della soluzione è quindi \SI{4}{\milli\litre} e la concentrazione è dimezzata (come si vede usando la formula
+	    (\ref{eq:proporzione}));}
+	\item{Abbiamo mescolato la soluzione in modo da renderla omogenea;}
+	\item{Abbiamo prelevato \SI{2}{\milli\litre} di sostanza che è stata versata in uno dei contenitori trasparenti;}
+	\item{In seguito abbiamo ripetuto la procedura con i \SI{2}{\milli\litre} restanti di soluzione, in modo da dimezzare ulteriormente la concentrazione, fino a giungere alla concentrazione finale desiderata;}
 \end{itemize}
 
-Infine ogni gruppo ha creato una soluzione con concentrazione molare tra 1 e 0.5. Il nostro gruppo aveva l'incarico di preparare la soluzione 0.75 molare.
-Quindi seguendo l'equazione (\ref{eq:proporzione}) abbiamo creato la soluzione di $CuSO_4$ con concentrazione 0.75 molare. Facciamo notare che in questo caso siamo partiti con $1.5\,\,\si{\milli\litre}$ di soluzione uno molare. 
+Alla fine abbiamo ottenuto quattro contenitori trasparenti con al loro interno \SI{2}{\milli\litre} di sostanza alle concentrazioni:
+0.5 \si{\mol\per\litre}, 0.25 \si{\mol\per\litre}, 0.125 \si{\mol\per\litre}, 0.0625 \si{\mol\per\litre}.
+Inoltre ogni gruppo ha creato una soluzione con concentrazione molare tra 1 e 0.5.
+Il nostro gruppo aveva l'incarico di preparare la soluzione 0.75 molare, che abbiamo preparato
+grazie all'equazione (\ref{eq:proporzione}). In questo caso siamo partiti con
+$1.5\,\,\si{\milli\litre}$ di soluzione uno molare e abbiamo aggiunto \SI{1}{\milli\litre} di acqua distillata. 
 
 \begin{equation*}
 	V_f \,\, = \,\, V_i \,\, \frac{C_i}{C_f} \,\, = \,\, 1.5 \si{\milli\litre} \,\, \frac{1 \,\, \si{\mole\per\litre}}{0.75 \,\, \si{\mole\per\litre}} \,\, = \,\, 2 \,\, \si{\milli\litre}
@@ -43,7 +47,7 @@ Come prima operazione abbiamo misurato l'intensità iniziale del raggio laser ($
 	I\ped{0\ped{1}} \,\,=\,\, 130 \pm 1 \,\,\, \si{\joule} \,\, ??
 \end{equation*}
 %
-Quindi abbiamo misurato per ogni concentrazione di $CuSO_4$ l'intensità luminosa finale ($I_f$) del raggio laser. Abbiamo eseguito questa misura non solo sulle quattro concentrazioni da noi fatte ma anche su quelle comuni a tutti i gruppi, ovvero quelle comprese tra 1 e 0.5 molare. I valori da noi ottenuti sono riportati nella tabela seguente, Tabella \ref{tab:dati}.
+Quindi abbiamo misurato per ogni concentrazione di CuSO$_4$ l'intensità luminosa finale ($I_f$) del raggio laser. Abbiamo eseguito questa misura non solo sulle quattro concentrazioni da noi fatte ma anche su quelle comuni a tutti i gruppi, ovvero quelle comprese tra 1 e 0.5 molare. I valori da noi ottenuti sono riportati nella tabela seguente, Tabella \ref{tab:dati}.
 Infine abbiamo misurato nuovamente il valore dell'intensità luminosa del raggio laser a vuoto. Abbiamo ottenuto un valore di:
 
 \begin{equation*}
@@ -71,7 +75,7 @@ Questa seconda misura ci serve per accertarci che l'apparato durante tutte le mi
         $0.0625 \pm 0.003$ & $91 \pm 1$ \\
         \bottomrule
     \end{tabular}
-    \caption{In questa tabella sono riportati sulla prima colonna i valori della concentrazione molare di solfato di rame ($CuSO_4$) che siamo andati ad analizzare man mano. Sulla seconda colonna sono riportati i valori dell'intensità luminosa ($I_f$) in uscita dalla provetta contenente la soluzione. Ricordiamo che la soluzione 1 molare è stata presa senza errore. E' imprtante notare che gli errori sulle concetrazioni non sono uniformi in quanto ogni concentrazione (a scendere) è stata ottenuta da quella precedente, pertanto l'inceretezza si propaga. Infine facciamo notare che l'incertezza è stata inserita soltanto per le concentrazioni ottenute dalla procedura descritta ad inizio paragrafo, mentre alle concentrazioni condivise dai vari gruppi si è deciso di non attribuire alcun'errore.}
+    \caption{In questa tabella sono riportati sulla prima colonna i valori della concentrazione molare di solfato di rame (CuSO$_4$) che siamo andati ad analizzare man mano. Sulla seconda colonna sono riportati i valori dell'intensità luminosa ($I_f$) in uscita dalla provetta contenente la soluzione. Ricordiamo che la soluzione 1 molare è stata presa senza errore. E' imprtante notare che gli errori sulle concetrazioni non sono uniformi in quanto ogni concentrazione (a scendere) è stata ottenuta da quella precedente, pertanto l'inceretezza si propaga. Infine facciamo notare che l'incertezza è stata inserita soltanto per le concentrazioni ottenute dalla procedura descritta ad inizio paragrafo, mentre alle concentrazioni condivise dai vari gruppi si è deciso di non attribuire alcun'errore.}
     \label{tab:dati}
 \end{table}
 %
