--- a/O5/Latex/Titolo.tex
+++ b/O5/Latex/Titolo.tex
@@ -1,6 +1,7 @@
 \begin{center}
-
-     	{\huge Legge di Lambert-Beer \\}
+        \includegraphics[width=10mm]{beer.pdf}
+     	{\huge \; Legge di Lambert-Beer \;}
+     	\includegraphics[width=10mm]{beer.pdf}
     \vspace{0.5cm}
 
       	{\large Francesco Pasa, Davide Bazzanella, Andrea Miani} \\
