--- a/O5/Latex/Materiale.tex
+++ b/O5/Latex/Materiale.tex
@@ -6,6 +6,6 @@ Per questa esperienza di laboratorio il materiale a disposizione è stato il seg
     \item{Un beaker contenente acqua distillata;}
 	\item{5 contenitori trasparenti e una base in polistirolo;}
 	\item{Due pipette Pasteur, o contagocce;}
-	\item{Una certa quantità di soluzione uno molare di solfato di rame ($CuSO_4$) in comune a tutti i gruppi;}
+	\item{Una certa quantità di soluzione uno molare di solfato di rame (CuSO$_4$) in comune a tutti i gruppi;}
 	\item{Apparato di misura composto da laser, sistema di lenti, staffe, supporti vari e un misuratore di intensità luminosa;}
 \end{itemize}
